--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,21 @@
-.headerImage{
-  position: absolute;
+#particles-js {
+  background: rgb(37, 40, 52);
   overflow: hidden;
-  width: 100%;
   height: 100%;
-  margin-top: 40px;
-  background-image: url('../assets/header.gif');
+  width: 100%;
+  margin: 0;
+
 }
+
+.intro{
+  position: absolute;
+  margin-top: 22%;
+  margin-left: 20%;
+  color: white;
+  padding: 0;
+}
+
+
+
+
+
