--- a/styles/style.css
+++ b/styles/style.css
@@ -9,21 +9,28 @@
 
 h1{
   font-family: 'Raleway', sans-serif;
-
-}
-body {
-      font-family: 'Raleway', sans-serif;
-        /*font-size: 48px;*/
-      }
-
-.intro{
-  position: absolute;
-  margin-top: 22%;
-  margin-left: 20%;
-  color: white;
+  font-size: 50px;
   padding: 0;
 
 }
+h2{
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
+  padding: 0;
+
+}
+.intro{
+  position: absolute;
+  color: #EFF2EF;
+}
+
+.container{
+  position: absolute;
+  width: 100%;
+  margin-top: 25%;
+  margin-left: 25%;
+}
+
 .ui.basic.button{
   border-color: white !important;
   position: absolute !important;
