--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ h2{
 
 }
 /* .about-header{ */
-  /* margin-top: 0;
+  /* margin-top: 0;git 
   width: 100%;
   height: 50%; */
   /* background-color: rgb(244, 248, 250); */
