--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,121 @@
+
+                                                                            /* NAV BAR */
+.new-menu{
+  display: flex;
+  flex-direction: row !important;
+  width: 100%;
+  height: 15%;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  border-bottom: 0.1em solid lightgray;
+  
+}
+.menu-nav{
+  display: flex;
+  flex-direction: row;
+
+}
+ul{
+  width: 100%;
+  align-items: center;
+  color: #212d50;
+}
+
+ul, li {
+  list-style-type: none;
+  align-items: center;
+}
+
+li {
+  margin-bottom: 5%;
+}
+.name{
+  height: 100%;
+  width: 40%;
+  float: left;
+}
+.projects-link{
+  height: 100%;
+  width: 25%;
+}
+.about-contact{
+  height: 100%;
+  width: 10%;
+}
+.contact{
+  height: 100%;
+  width: 25%;
+  float: right;
+}
+
+.name-text{
+  color: #212d50;
+  margin-top: 10%;
+  /* height: 50px; */
+  align-content: center;
+  
+}
+.project-text{
+  margin-top: 20%;
+  /* height: 50px; */
+  align-content: center;
+}
+.about-text{
+  margin-top: 50%;
+  /* height: 50px; */
+  align-content: flex-end;
+}
+.contact-text{
+  margin-top: 20%;
+  /* height: 50px; */
+  align-content: center;
+  /* margin-left: 5px; */
+}
+
+.projects-font{
+  
+  
+  margin-left: 65%;
+  line-height: 40px;
+  font-size: 20px;
+  font-weight: 400;
+  cursor: pointer;
+  
+    letter-spacing: 3px;
+
+}
+.about-font{
+  
+  
+  margin-left: 35%;
+  line-height: 40px;
+  font-size: 20px;
+  font-weight: 400;
+  cursor: pointer;
+  
+    letter-spacing: 3px;
+}
+.contact-font{
+  
+  margin-left: 15%;
+  line-height: 40px;
+  font-size: 20px;
+  font-weight: 400;
+  cursor: pointer;
+  letter-spacing: 3px;
+}
+
+                                                                      /* END NAV BAR */
+
+                                                                     /* LANDING PAGE */
+
 #particles-js {
   /* background: rgb(37, 40, 52); */
-  background: rgb(242, 240, 236);
+  /* background: rgb(242, 240, 236); */
+  /* background: #F5F4F1; */
+  background: #F9F8F6;
   overflow: hidden;
   height: 100%;
   width: 100%;
@@ -8,41 +123,18 @@
 
 }
 
-a{
-  font-family: 'Raleway', sans-serif;
-  text-decoration: none;
-  color: rgb(64, 64, 64) !important;
-  /* color: #EFF2EF; */
-  
-}
-
-h1{
-  font-family: 'Inconsolata', monospace;
-  
-  padding: 0;
-  font-size: 45px;
-    line-height: 45px;
-    font-weight: 400;
-    color: rgb(66, 66, 66);
-    letter-spacing: 0px;
-
-}
-h2{
-  font-family: 'Inconsolata', monospace;
-  
-  padding: 0;
-  font-size: 45px;
-    line-height: 45px;
-    font-weight: 400;
-    color: rgb(66, 66, 66);
-    letter-spacing: 0px;
-
-}
-.intro{
+.container{
+  position: absolute;
   width: 100%;
-  height: 100px;
-  margin-top: 100px;
-  margin-right: 1000px;
+  /* margin-top: 25%;
+  margin-left: 25%; */
+}
+
+div.intro{
+  width: 100%;
+  height: 40%;
+  margin-top: 40%;
+  margin-left: 5%;
   position: absolute;
   color: rgb(66, 66, 66);
   font-size: 45px;
@@ -52,150 +144,348 @@ h2{
   letter-spacing: 0px;
 }
 
-.container{
-  position: absolute;
+                                                                               /* END LANDING PAGE */
+
+                                                                               /* PORTFOLIO */
+
+
+
+.portfolio-container{
+  height: 100%;
   width: 100%;
-  margin-top: 25%;
-  margin-left: 25%;
+ 
 }
+.portfolio{
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-auto-rows: 25%;
+  grid-gap: 3rem;
+  margin-top: 5%;
+  margin-left: 15%;
+  
+  width: 80%;
+  height: 110%;
+  
+}
+
+/* .portfolio div:nth-child(even){
+  background-color: lightblue;
+}
+
+.portfolio div:nth-child(odd){
+  background-color: lightgray;
+} */
+
+.portfolio-heading{
+  display: flex;
+  margin-top: 10%;
+  flex-direction: column;
+  align-items: center;
+
+  grid-column: 1 / 7;
+  grid-row: 1/2;
+
+}
+
+.box-1{
+  height: 100%;
+  width: 100%;
+  grid-column: 1 / 3;
+  grid-row: 2/4;
+  background-image: url("../assets/workspaces.jpeg");
+  background-size: cover;
+  cursor: pointer;
+  position: relative;
+}
+
+
+
+.hover-info{
+  height: 100%;
+  width: 0%;
+  top: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: absolute;
+  transition: 0.3s ease;
+  background-color: white;
+
+}
+
+.box-1:hover .hover-info{
+  width: 100%;
+  border: solid 1px;
+  border-color: lightgrey;
+
+}
+
+ .box-2{
+  grid-column: 3 / 5;
+  grid-row: 2/3;
+  background-image: url("../assets/dog.jpg");
+  background-size: cover;
+}
+
+.box-3{
+  grid-column: 5 / 7;
+  grid-row: 2/3;
+  background-image: url("../assets/dogs.jpeg");
+  background-size: cover;
+} 
+
+.box-4{
+  grid-column: 3 / 5;
+  grid-row: 3 / 4;
+}
+
+.box-5{
+  grid-column: 5 / 7;
+  grid-row: 3 / 4 ;
+}
+
+.box-6{
+  grid-column: 3 / 4;
+  grid-row: 4 / 6 ;
+}
+
+
+
+
+
+
+
+
+
+                                                                                /* END PORTFOLIO */
+
+                                                                                /* ABOUT */
+
 .paragraph-container{
-  position: absolute;
-  width: 50%;
-  /* display: flex; */
-  /* justify-content: center; */
-  margin-top: 450px;
-  margin-left: 300px;
+  /* background: rgb(242, 240, 236); */
+  background: #F9F8F6;
+  margin-top: 5%;
+  width: 100%;
+  height: 120%;
+  /* display: flex;  */
   
+  /* align-items: center; */
   
-
 }
+
+
 .paragraph{
-  /* margin-left: 50px; */
-}
-
-.column.picture{
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-auto-rows: 35%;
+  grid-gap: 4rem;
+  margin-top: 10%;
+  margin-left: 18%;
+  width: 90%;
+  height: 100%;
   position: absolute;
-  margin-top: 400px;
-  margin-left: 800px;
-  height: 400px;
-  width: 400px;
-  /* border-radius: 50%; */
+
 }
 
-.ui.basic.button{
-  border-color: white !important;
-  position: absolute !important;
-  color: white !important;
-  font-family: 'Raleway', sans-serif;
+
+
+.about-blurb{
+  grid-column: 1 / 8;
+  grid-row: 1/2;
+  width: 63%;
+  /* margin-left: 5%; */
+  display: flex;
+  flex-direction: column;
+  
 }
 
-.ui.borderless.menu{
-  position: fixed;
-  top: 0;
-  height: 200px !important;
-  width: 100% !important;
-  display: flex !important;
-  justify-content: right !important;
-  font-size: 30px;
-  margin-bottom: 0;
-  background-color: white !important;
-  z-index: 100;
-  /* color: white !important; */
+
+
+.about-picture{
+  background-image: url("../assets/jhedi2_40.jpg");
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  margin-right: 10%;
+  grid-column: 6 / 8;
+  grid-row: 1/2;
+}
+
+.second-about-blurb{
+  grid-column: 5 / 8;
+  grid-row: 2/3;
+  margin-top: 35%;
+  margin-left: 10%;
+}
+
+.second-about-img{
+  background-image: url("../assets/my_dogs.jpg");
+  background-size: cover;
+  grid-column: 1 / 5;
+  grid-row: 2/3;
+}
+.third-about-img{
+  grid-column: 2 / 3;
+  grid-row: 2/3;
+
+}
+                                                                                
+
+                                                                                /* END ABOUT */
+
+                                                                                /* CONTACT */
+.contact-font-last{
+  
+  width: 100%;
+  height: 150%;
+  
+}
+
+.contact-container{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: 35%;
+  grid-gap: 2.5rem;
+  margin-top: 10%;
+    margin-left: 15%;
+   
+    width: 90%;
+    height: 90%;
+    position: absolute;
+
+}
+
+.contact-container div:nth-child(even){
+  background-color: lightblue;
+}
+
+.contact-container div:nth-child(odd){
+  background-color: lightgray;
+}
+
+div.map{
+  /* background-image: url("../assets/jhedi2_40.jpg");
+  
+  background-size: cover; */
   /* position: absolute; */
-}
-
-/* .projects{
-  padding: 0;
-  margin-left: 70% !important;
-
-} */
-
-/* .item{
-  width: 200px;
-} */
-
-.paragraph{
-  width: 350px;
-
-}
-/* .about-header{ */
-  /* margin-top: 0;git 
+  height: 100%;
   width: 100%;
-  height: 50%; */
-  /* background-color: rgb(244, 248, 250); */
-  /* background: rgb(242, 240, 236);
-  display: flex; */
-  /* justify-content: center; */
-  /* border-bottom: 0.5px solid !important;
-  border-color: rgba(0,0,0,.125); */
+ 
+  /* margin-bottom: 80%;
+  margin-left: 35%; */
+  border: solid 1px;
   
-/* } */
-
-.about{
-  background: rgb(242, 240, 236);
-  /* background: white; */
 }
 
-div.about-picture{
-    background-image: url("../assets/jhedi2_40.jpg");
-    
-    background-size: cover;
-    
+.contact-page{
+  grid-column: 1 / 3;
+  grid-row: 1/2;
 }
 
-.header-icons{
-  position: absolute;
-  margin-top: 270px;
+.map{
+  grid-column: 3 / 6;
+  grid-row: 1/3;
 }
 
-.footer{
-  overflow: hidden;
-  margin-bottom: 0;
-  margin-top: 30%;
-  width: 100%;
-  height: 50px;
-  display: flex;
-  border-top: 2px solid;
-  border-color: rgb(222, 222, 223);
-  border-top-style: solid;
-  border-top-width: 1px;
-  border-top-color: rgba(0,0,0,.125);
-
+.contact-form{
+  grid-column: 3 / 6;
+  grid-row: 3/4;
 
 }
-.footer-icons{
-  color: grey;
-  position: absolute;
-  height: 50px;
-  width: 30%;
-  margin-top: 15px;
-  margin-left: 90%;
-  display: flex;
-  /*justify-content: flex-end !important;*/
 
-}
-.copy-right{
-  color: grey;
-  margin-top: 15px;
-  width: 30%;
-  margin-left: 5%;
+
+                                                                            /* END CONTACT */
+
+                                                                            /* FONTS/A/H/TAGS */
+a{
+  color: #212d50 !important;
+  text-decoration: none;
+  /* color: rgb(64, 64, 64) !important; */
+  /* color: #EFF2EF; */
+  
 }
 
-#pinContainer {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.panel {
-  height: 100%;
-  width: 100%;
-  position: absolute;
+.intro-font{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400 ;
+  color: #212d50 !important;
+  font-size: 46px;
+  line-height: 45px;
+  letter-spacing: 3px;
+
 }
 
-.panel .additionalContent {
-  top: 100%;
-  position: absolute;
+.intro-paragraph-font{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 35px;
+  color: #43454B;
+  letter-spacing: 3px;
 }
+
+.portfolio-heading-text{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400 ;
+  color: #212d50 !important;
+  font-size: 38px;
+  line-height: 45px;
+  letter-spacing: 0px;
+
+}
+
+.name-link-font{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400 bold !important;
+  color: #212d50 !important;
+  line-height: 45px;
+  font-size: 55px;
+  letter-spacing: 5px;
+  margin-left: 15%;
+  cursor: pointer;
+}
+
+.portfolio-heading-blurb{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  /* color: #43454B; */
+  color: #7d8292;
+
+}
+
+.about-blurb-tittle{
+  margin-bottom: 10%;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400 bold;
+  color: #212d50 !important;
+  font-size: 38px;
+  line-height: 45px;
+  letter-spacing: 0px;
+}
+
+.about-blurb-text{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color: #7d8292;
+}
+
+.second-about-blurb-text{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color: #43454B;
+  
+}
+
+
+
+                                                                        /* END FONTS/A/H/TAGS */
+
+
+
+
+
+
+
+
 
 #triggers {
   position: absolute;
@@ -217,135 +507,10 @@ div.about-picture{
   top: 300%;
 }
 
-.bordeaux {
-  background-color: white;
-}
 
-.project{
-  background-color: white;
-}
 
-.new-menu{
-  display: flex;
-  width: 100%;
-  height: 150px;
-  background-color: white;
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  border-bottom: 0.1em solid lightgray;
-  
-}
-.name{
-  height: 100%;
-  width: 40%;
-}
-.projects-link{
-  height: 100%;
-  width: 25%;
-}
-.about-contact{
-  height: 100%;
-  width: 10%;
-}
-.contact{
-  height: 100%;
-  width: 25%;
-}
 
-.name-text{
-  margin-top: 10%;
-  height: 50px;
-  align-content: center;
-  
-}
-.project-text{
-  margin-top: 20%;
-  height: 50px;
-  align-content: center;
-}
-.about-text{
-  margin-top: 50%;
-  height: 50px;
-  align-content: flex-end;
-}
-.contact-text{
-  margin-top: 20%;
-  height: 50px;
-  align-content: center;
-  /* margin-left: 5px; */
-}
-.name-link-font{
-  font-family: 'Unica One', cursive;
-  margin-left: 150px;
-  line-height: 60px;
-  /* height: 45px; */
-  font-size: 40px;
-  font-weight: 400;    
-  cursor: pointer;
-  /* border-color: transparent;
-    border-style: solid;
-    border-width: 0px 0px 3px; */
-    letter-spacing: 3px;
-}
-.projects-font{
-  font-family: 'Unica One', cursive;
-  margin-left: 240px;
-  line-height: 40px;
-  font-size: 20px;
-  font-weight: 400;
-  cursor: pointer;
-  /* border-style: solid;
-    border-width: 0px 0px 3px; */
-    letter-spacing: 3px;
 
-}
-.about-font{
-  font-family: 'Unica One', cursive;
-  margin-left: 50px;
-  line-height: 40px;
-  font-size: 20px;
-  font-weight: 400;
-  cursor: pointer;
-  /* border-style: solid;
-    border-width: 0px 0px 3px; */
-    letter-spacing: 3px;
-}
-.contact-font{
-  font-family: 'Unica One', cursive;
-  margin-left: 50px;
-  line-height: 40px;
-  font-size: 20px;
-  font-weight: 400;
-  cursor: pointer;
-  /* border-style: solid;
-    border-width: 0px 0px 3px; */
-    letter-spacing: 3px;
-}
 
-.portfolio{
-  /* background-color: blue; */
-  width: 100%;
-  margin-left: 280px;
-  margin-bottom: 60px;
-  
-}
-.segment{
-  height: 300px;
-  width: 300px;
-  border: 0.1em solid lightgray;
-}
-.portfolio-font{
-  margin-top: 450px;
-  margin-left: 30px;
-}
-.contact-font-last{
-  width: 30%;
-  margin-top: 400px;
-  margin-left: 300px;
-}
 
-.column.map{
-  margin-left: 800px;
-}
 
