--- a/styles/style.css
+++ b/styles/style.css
@@ -281,8 +281,8 @@ div.intro{
   grid-auto-rows: 35%;
   grid-gap: 4rem;
   margin-top: 10%;
-  margin-left: 18%;
-  width: 90%;
+  margin-left: 15%;
+  width: 100%;
   height: 100%;
   position: absolute;
 
@@ -356,13 +356,13 @@ div.intro{
 
 }
 
-.contact-container div:nth-child(even){
+/* .contact-container div:nth-child(even){
   background-color: lightblue;
 }
 
 .contact-container div:nth-child(odd){
   background-color: lightgray;
-}
+} */
 
 div.map{
   /* background-image: url("../assets/jhedi2_40.jpg");
