--- a/styles/style.css
+++ b/styles/style.css
@@ -365,10 +365,7 @@ div.intro{
 } */
 
 div.map{
-  /* background-image: url("../assets/jhedi2_40.jpg");
   
-  background-size: cover; */
-  /* position: absolute; */
   height: 100%;
   width: 100%;
  
@@ -386,6 +383,8 @@ div.map{
 .map{
   grid-column: 3 / 6;
   grid-row: 1/3;
+  height: 100%;
+  width: 100%;
 }
 
 .contact-form{
