--- a/styles/style.css
+++ b/styles/style.css
@@ -364,26 +364,26 @@ div.intro{
   background-color: lightgray;
 } */
 
-div.map{
+div#map{
   
-  height: 100%;
+  height: 400px;
   width: 100%;
  
-  /* margin-bottom: 80%;
-  margin-left: 35%; */
-  border: solid 1px;
-  
+  margin-bottom: 80%;
+  margin-left: 35%; 
+ border: solid 1px;
 }
+
 
 .contact-page{
   grid-column: 1 / 3;
   grid-row: 1/2;
 }
 
-.map{
-  grid-column: 3 / 6;
+#map{
+  grid-column: 2 / 5;
   grid-row: 1/3;
-  height: 100%;
+  height: 200px;
   width: 100%;
 }
 
