--- a/styles/style.css
+++ b/styles/style.css
@@ -224,25 +224,33 @@ div.intro{
  .box-2{
   grid-column: 3 / 5;
   grid-row: 2/3;
-  background-image: url("../assets/dog.jpg");
+  background-image: url("../assets/dogs.jpeg");
   background-size: cover;
+  
+  
 }
 
 .box-3{
   grid-column: 5 / 7;
   grid-row: 2/3;
-  background-image: url("../assets/dogs.jpeg");
+  
+  background-image: url("../assets/vital.png");
   background-size: cover;
+  
 } 
 
 .box-4{
   grid-column: 3 / 5;
   grid-row: 3 / 4;
+  background-image: url("../assets/pixeldog.gif");
+  background-size: cover;
 }
 
 .box-5{
   grid-column: 5 / 7;
   grid-row: 3 / 4 ;
+  background-image: url("../assets/dog.jpg");
+  background-size: cover;
 }
 
 .box-6{
@@ -282,7 +290,7 @@ div.intro{
   grid-gap: 4rem;
   margin-top: 10%;
   margin-left: 15%;
-  width: 100%;
+  width: 90%;
   height: 100%;
   position: absolute;
 
@@ -303,7 +311,7 @@ div.intro{
 
 
 .about-picture{
-  background-image: url("../assets/jhedi2_40.jpg");
+  background-image: url("../assets/jhedi2_40\ 2.jpg");
   background-size: cover;
   height: 100%;
   width: 100%;
@@ -320,7 +328,7 @@ div.intro{
 }
 
 .second-about-img{
-  background-image: url("../assets/my_dogs.jpg");
+  background-image: url("../assets/IMG_2635.jpg");
   background-size: cover;
   grid-column: 1 / 5;
   grid-row: 2/3;
@@ -338,7 +346,7 @@ div.intro{
 .contact-font-last{
   
   width: 100%;
-  height: 150%;
+  height: 100%;
   
 }
 
@@ -369,9 +377,9 @@ div#map{
   height: 400px;
   width: 100%;
  
-  margin-bottom: 80%;
+  
   margin-left: 35%; 
- border: solid 1px;
+ b
 }
 
 
@@ -396,6 +404,22 @@ div#map{
 
                                                                             /* END CONTACT */
 
+                                                                            /* FOOTER */
+
+div.footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  /* bottom: 0; */
+  border-top: 1px solid lightgray;
+  margin-top: 7%;
+  /* height: 5%; */
+  width: 100%;
+}
+
+                                                                            /* END FOOTER */
+
                                                                             /* FONTS/A/H/TAGS */
 a{
   color: #212d50 !important;
@@ -418,7 +442,7 @@ a{
 .intro-paragraph-font{
   font-family: 'Open Sans', sans-serif;
   font-size: 35px;
-  color: #43454B;
+  color: #212d50 !important;
   letter-spacing: 3px;
 }
 
@@ -447,7 +471,7 @@ a{
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
   /* color: #43454B; */
-  color: #7d8292;
+  color: #43454B;
 
 }
 
@@ -464,7 +488,7 @@ a{
 .about-blurb-text{
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
-  color: #7d8292;
+  color: #43454B;
 }
 
 .second-about-blurb-text{
@@ -474,7 +498,30 @@ a{
   
 }
 
+.contact-page-text{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400 ;
+  color: #212d50 !important;
+  font-size: 38px;
+  line-height: 45px;
+  letter-spacing: 0px;
+  margin-top: 5%;
 
+}
+
+.contact-page-text-email{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color: #43454B;
+}
+
+.footer-text{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color: #43454B;
+  padding-top: 1%;
+  
+}
 
                                                                         /* END FONTS/A/H/TAGS */
 
