--- a/styles/style.css
+++ b/styles/style.css
@@ -168,13 +168,6 @@ div.intro{
   
 }
 
-/* .portfolio div:nth-child(even){
-  background-color: lightblue;
-}
-
-.portfolio div:nth-child(odd){
-  background-color: lightgray;
-} */
 
 .portfolio-heading{
   display: flex;
@@ -224,10 +217,32 @@ div.intro{
  .box-2{
   grid-column: 3 / 5;
   grid-row: 2/3;
-  background-image: url("../assets/dogs.jpeg");
+  background-image: url("../assets/umbrellas.jpeg");
   background-size: cover;
+  cursor: pointer;
+  position: relative;
   
-  
+}
+
+.hover-info{
+  height: 100%;
+  width: 0%;
+  top: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: absolute;
+  transition: 0.3s ease;
+  background-color: white;
+
+}
+
+.box-2:hover .hover-info{
+  width: 100%;
+  border: solid 1px;
+  border-color: lightgrey;
+
 }
 
 .box-3{
@@ -236,14 +251,60 @@ div.intro{
   
   background-image: url("../assets/vital.png");
   background-size: cover;
+  cursor: pointer;
+  position: relative;
   
 } 
+
+.hover-info{
+  height: 100%;
+  width: 0%;
+  top: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: absolute;
+  transition: 0.3s ease;
+  background-color: white;
+
+}
+
+.box-3:hover .hover-info{
+  width: 100%;
+  border: solid 1px;
+  border-color: lightgrey;
+
+}
 
 .box-4{
   grid-column: 3 / 5;
   grid-row: 3 / 4;
   background-image: url("../assets/pixeldog.gif");
   background-size: cover;
+  cursor: pointer;
+  position: relative;
+}
+
+.hover-info{
+  height: 100%;
+  width: 0%;
+  top: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: absolute;
+  transition: 0.3s ease;
+  background-color: white;
+
+}
+
+.box-4:hover .hover-info{
+  width: 100%;
+  border: solid 1px;
+  border-color: lightgrey;
+
 }
 
 .box-5{
@@ -251,6 +312,30 @@ div.intro{
   grid-row: 3 / 4 ;
   background-image: url("../assets/dog.jpg");
   background-size: cover;
+  cursor: pointer;
+  position: relative;
+}
+
+.hover-info{
+  height: 100%;
+  width: 0%;
+  top: 0%;
+  display: flex;
+  flex-direction: column
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: absolute;
+  transition: 0.3s ease;
+  background-color: white;
+
+}
+
+.box-5:hover .hover-info{
+  width: 100%;
+  border: solid 1px;
+  border-color: lightgrey;
+
 }
 
 .box-6{
@@ -474,6 +559,20 @@ a{
   color: #43454B;
 
 }
+
+.project-box-font{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400 ;
+  color: #212d50 !important;
+  font-size: 20px;
+  line-height: 45px;
+  letter-spacing: 0px;
+  margin-top: 5%;
+}
+
+/* .project-box-description{
+
+} */
 
 .about-blurb-tittle{
   margin-bottom: 10%;
