--- a/styles/style.css
+++ b/styles/style.css
@@ -568,7 +568,7 @@ a{
   font-family: 'Montserrat', sans-serif;
   font-weight: 400 ;
   color: #212d50 !important;
-  font-size: 20px;
+  font-size: 20px !important;
   line-height: 45px;
   letter-spacing: 0px;
   margin-top: 5%;
