--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 15%;
   background-color: white;
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   z-index: 100;
   border-bottom: 0.1em solid lightgray;
@@ -637,25 +637,6 @@ a{
 
 
 
-#triggers {
-  position: absolute;
-  height: 100%;
-}
-#triggers div {
-  position: absolute;
-}
-#triggers #t1 {
-  top: 0;
-}
-#triggers #t2 {
-  top: 100%;
-}
-#triggers #t3 {
-  top: 200%;
-}
-#triggers #t4 {
-  top: 300%;
-}
 
 
 
