--- a/styles/style.css
+++ b/styles/style.css
@@ -957,6 +957,18 @@ a{
     grid-row: 1/2;
   }
 
+  div.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* bottom: 0; */
+    border-top: 1px solid lightgray;
+    margin-top: 7%;
+    height: 10%;
+    width: 100%;
+}
+
   
 }
 
@@ -989,6 +1001,7 @@ a{
     color: #212d50 !important;
     letter-spacing: 3px;
   }
+
 
   .new-menu {
     width: 100%;
@@ -1110,7 +1123,7 @@ a{
   div.intro{
     width: 100%;
     height: 40%;
-    margin-top: 65%;
+    margin-top: 80%;
     margin-left: 5%;
     position: absolute;
     color: rgb(66, 66, 66);
@@ -1133,9 +1146,11 @@ a{
     height: 110%;
     
   }
+
+  
   .portfolio-heading {
     display: flex;
-    margin-top: 20%;
+    margin-top: 50%;
     flex-direction: column;
     align-items: center;
     grid-column: 1 ;
@@ -1252,11 +1267,435 @@ a{
     grid-row: 1/2;
   }
 
+  .contact-font-last{
+  
+    width: 100%;
+    height: 100%;
+    
+  }
+  
+  .contact-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 35%;
+    grid-gap: 1rem;
+    margin-top: 10%;
+    margin-left: 10%;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+  
+  }
+  
+  
+  
+  div#map{
+   height: 300px;
+   width: 100%;
+   margin-left: 0;
+   margin-right: 40%;
+  
+  }
+  
+  
+  .contact-page{ 
+    grid-column: 1;
+    grid-row: 2;
+    margin-top: 10%;
+  }
+  
+  #map{
+    grid-column: 1;
+    grid-row: 1;
+    /* height: 150px !important; */
+   
+    /* margin-right: 30% !important; */
+  }
+  
+  .contact-form{
+    grid-column: 3 / 6;
+    grid-row: 3/4;
+  
+  }
+
+  div.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* bottom: 0; */
+    border-top: 1px solid lightgray;
+    margin-top: 7%;
+    height: 10%;
+    width: 100%;
+}
+
 }
 
 
 
+@media screen and (max-width: 575px){
+  .name-link-font{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    line-height: 45px;
+    font-size: 40px;
+    letter-spacing: 5px;
+    margin-top: 10%;
+    margin-left: 15%;
+    cursor: pointer;
+  }
 
+  .intro-font{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400 ;
+    color: #212d50 !important;
+    font-size: 35px;
+    line-height: 45px;
+    letter-spacing: 3px;
+  
+  }
+  
+  .intro-paragraph-font{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 25px;
+    color: #212d50 !important;
+    letter-spacing: 3px;
+  }
+
+
+  .new-menu {
+    width: 100%;
+     height: 15%;
+     background-color: white;
+     border-bottom: 0.1em solid lightgray;
+     margin: 0;
+     padding: 0;
+}
+
+   .menu-nav{
+     height: 100%;
+     padding: 0;
+     margin: 0;
+     display: grid;
+     grid-template-columns: repeat(9, 1fr);
+     grid-auto-rows: 50%;
+
+     }
+   
+   
+   ul{
+     width: 100%;
+     
+     color: #212d50;
+   }
+   
+   ul, li {
+     list-style-type: none;
+     
+   }
+   
+  
+
+   .name{
+     height: 100%;
+     grid-column: 1/ 10;
+     grid-row: 1;
+
+   }
+
+   .projects-link{
+     height: 100%;
+     grid-column: 3/ 4;
+   }
+
+   .about-contact{
+     height: 100%;
+     grid-column: 5/ 6;
+   }
+
+   .contact{
+     height: 100%;
+     grid-column: 7/ 10;
+    
+   }
+   
+   .name-text{
+     color: #212d50;
+     margin-left: 35%;
+     margin-top: 3%;
+  }
+
+   .project-text{
+    margin: 15% 0 0 0;
+    
+   }
+   .about-text{
+    margin: 15% 0 0 0;
+    
+   }
+   .contact-text{
+    margin: 5% 0 0 0;
+    
+   }
+   
+   .projects-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   
+   }
+   .about-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+   .contact-font{
+     line-height: 40px;
+     font-size: 20px;
+     font-weight: 400;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+
+   #particles-js {
+    /* background: rgb(37, 40, 52); */
+    /* background: rgb(242, 240, 236); */
+    /* background: #F5F4F1; */
+    background: #F9F8F6;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+  
+  }
+  
+  .container{
+    position: absolute;
+    width: 100%;
+    /* margin-top: 25%;
+    margin-left: 25%; */
+  }
+  
+  div.intro{
+    width: 100%;
+    height: 30%;
+    margin-top: 90%;
+    margin-left: 5%;
+    position: absolute;
+    color: rgb(66, 66, 66);
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: 400;
+    
+    letter-spacing: 0px;
+  }
+
+  .portfolio{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 40%;
+    /* grid-gap: 3rem; */
+    /* margin-top: 5%; */
+    margin-left: 10%;
+    
+    width: 80%;
+    height: 110%;
+    
+  }
+
+  
+  .portfolio-heading {
+    display: flex;
+    margin-top: 50%;
+    flex-direction: column;
+    align-items: center;
+    grid-column: 1 ;
+
+    grid-row: 1 ;
+}
+.portfolio-heading-blurb{
+  margin-left: 10%;
+}
+
+  .box-1{
+    /* height: 100%; */
+    grid-column: 1;
+    grid-row: 2 ;
+  }
+
+  .box-2{
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .box-3{
+    grid-column: 1 ;
+    grid-row: 4;
+  }
+  .box-4{
+    grid-column: 1;
+    grid-row: 5;
+  }
+  .box-5{
+    grid-column: 1 ;
+    grid-row: 6;
+  }
+  .box-6{
+    grid-column: 1;
+    grid-row: 7;
+  }
+  
+
+  .paragraph-container{
+    /* background: rgb(242, 240, 236); */
+    background: #F9F8F6;
+    margin-top: 350%;
+    width: 100%;
+    height: 150%;
+    /* display: flex;  */
+    
+    /* align-items: center; */
+    
+  }
+  
+  
+  .paragraph{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 40%;
+    grid-gap: 1rem;
+    margin-top: 15%;
+    margin-left: 10%;
+    width: 70%;
+    height: 100%;
+    position: absolute;
+  
+  }
+  
+  
+  
+  .about-blurb{
+    grid-column: 1 ;
+    grid-row: 1 ;
+    width: 100%;
+    /* margin-left: 5%; */
+    display: flex;
+    flex-direction: column;
+    
+  }
+  
+  
+  
+  .about-picture{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    margin-right: 10%;
+    grid-column: 1 !important;
+    grid-row: 2 !important;
+  }
+  
+  .second-about-blurb{
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 10%;
+    margin-left: 0;
+  }
+  
+  .second-about-img{
+    background-image: url("../assets/IMG_2635.jpg");
+    background-size: cover;
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 30%;
+  }
+  /* .third-about-img{
+    grid-column: 2 / 3;
+    grid-row: 2/3;
+  
+  } */
+                                                                                  
+  
+  .about-picture{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    margin-right: 10%;
+    grid-column: 6 / 8;
+    grid-row: 1/2;
+  }
+
+  .contact-font-last{
+  
+    width: 100%;
+    height: 100%;
+    
+  }
+  
+  .contact-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 35%;
+    grid-gap: 1rem;
+    margin-top: 10%;
+    margin-left: 10%;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+  
+  }
+  
+  
+  
+  div#map{
+   height: 300px;
+   width: 100%;
+   margin-left: 0;
+   margin-right: 40%;
+  
+  }
+  
+  
+  .contact-page{ 
+    grid-column: 1;
+    grid-row: 2;
+    margin-top: 10%;
+  }
+  
+  #map{
+    grid-column: 1;
+    grid-row: 1;
+    /* height: 150px !important; */
+   
+    /* margin-right: 30% !important; */
+  }
+  
+  .contact-form{
+    grid-column: 3 / 6;
+    grid-row: 3/4;
+  
+  }
+
+  div.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* bottom: 0; */
+    border-top: 1px solid lightgray;
+    margin-top: 7%;
+    height: 10%;
+    width: 100%;
+}
+
+}
 
 
 
