--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -90,7 +90,7 @@
    
    .name-text{
      color: #212d50 !important;
-     margin-left: 35% !important;
+     margin-left: 31% !important;
      margin-top: 3% !important;
      /* margin-bottom: 20%; */
   }
@@ -100,7 +100,7 @@
     
    }
    .about-text{
-    margin: 0 0 0 30% !important;
+    margin: 0 0 0 50% !important;
     
    }
    .contact-text{
@@ -327,7 +327,7 @@
   
     width: 100% !important;
     height: 100% !important;
-    margin-top: 320%;
+    margin-top: 250%;
     
   } 
    
@@ -400,9 +400,15 @@
     align-items: center !important;
     bottom: 0 !important;
     border-top: 1px solid lightgray !important;
-    margin-top: 35% !important;
+    margin-top: 25% !important;
     height: 5% !important; 
     width: 100% !important;
+}
+.footer-text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 10px !important;
+  color: #43454B !important;
+  padding-top: 5% !important;
 }
 
 }
