--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -234,12 +234,12 @@
   
 
   .paragraph-container{
-    display: none !important;
+    /* display: none !important; */
     /* background: rgb(242, 240, 236); */
     background: #F9F8F6;
-    margin-top: 220% !important;
+    margin-top: 230% !important;
     width: 100%;
-    height: 150%;
+    height: 100%;
     /* display: flex;  */
     
     /* align-items: center; */
@@ -249,42 +249,64 @@
   
   .paragraph{
     display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: 40%;
-    grid-gap: 1rem;
-    margin-top: 15%;
-    margin-left: 10%;
-    width: 70%;
-    height: 100%;
-    position: absolute;
+    grid-template-columns: 1fr !important;
+    grid-auto-rows: 40% !important;
+    grid-gap: 0.1rem !important;
+    margin-top: 15% !important;
+    margin-left: 5% !important;
+    width: 80% !important;
+    height: 100% !important;
+    /* position: absolute; */
   
   }
-  
-  
-  
   .about-blurb{
-    grid-column: 1 ;
-    grid-row: 1 ;
-    width: 100%;
+    grid-column: 1 !important;
+    grid-row: 1 !important;
+    width: 80% !important;
     /* margin-left: 5%; */
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     
   }
+  .about-blurb-tittle {
+    margin-bottom: 5% !important;
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    font-size: 30px !important;
+    /* line-height: 45px; */
+    letter-spacing: 3px !important;
+}
+
+.about-blurb-text {
+  font-family: 'Open Sans', sans-serif !important;
+  font-size: 12px !important;
+  color: #43454B !important;
+}
   
-  
-  
-  div.about-picture img{
-    /* background-image: url("../assets/jhedi2_40\ 3.jpg");
-    background-size: cover; */
+  /* div.about-picture img{
+    background-image: url("../assets/jhedi2_40\ 3.jpg");
+    background-size: cover;
     display: block;
   max-width: 100%;
   height: auto;
     margin-right: 10%;
     grid-column: 1 !important;
     grid-row: 2 !important;
-  }
-
+  } */
+  .about-picture {
+    background-image: url(../assets/jhedi2_40\ 3.jpg);
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    height: 400px !important;
+    width: 400px !important;
+    /* margin-right: 10% !important; */
+   
+    
+    grid-column: 1 !important;
+    grid-row: 2 !important;
+}
 
 
 
@@ -293,6 +315,7 @@
   
   
   .second-about-blurb{
+    display: none !important;
     grid-column: 1 !important;
     grid-row: 3 !important;
     margin-top: 10%;
@@ -300,6 +323,7 @@
   }
   
   .second-about-img{
+    display: none !important;
     background-image: url("../assets/IMG_2635.jpg");
     background-size: cover;
     grid-column: 1 !important;
@@ -313,7 +337,7 @@
   } */
                                                                                   
   
-  .about-picture{
+  /* .about-picture{
     background-image: url("../assets/jhedi2_40\ 3.jpg");
     background-size: cover;
     height: 100%;
@@ -321,13 +345,13 @@
     margin-right: 10%;
     grid-column: 6 / 8;
     grid-row: 1/2;
-  }
+  } */
 
     .contact-font-last{
   
     width: 100% !important;
     height: 100% !important;
-    margin-top: 250%;
+    margin-top: 30%;
     
   } 
    
