--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -237,9 +237,9 @@
     /* display: none !important; */
     /* background: rgb(242, 240, 236); */
     background: #F9F8F6;
-    margin-top: 230% !important;
-    width: 100%;
-    height: 100%;
+    margin-top: 280% !important;
+    width: 100% !important;
+    height: 100% !important;
     /* display: flex;  */
     
     /* align-items: center; */
