--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,6 +1,11 @@
 
 
 @media screen and (max-width: 480px){
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
   .name-link-font{
     font-family: 'Montserrat', sans-serif !important;
     font-weight: 400 bold !important;
@@ -211,26 +216,7 @@
     grid-row: 2 !important;
   }
 
-  .hover-info{
-    height: 100% !important;
-    width: 0% !important;
-    top: 0% !important;
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-    overflow: hidden !important;
-    position: absolute !important;
-    transition: 0.3s ease !important;
-    background-color: white !important;
   
-  }
-
-  .box-1:hover .hover-info{
-    width: 100% !important;
-    border: solid 1px !important;
-    border-color: lightgrey !important;
-  
-  }
 
   .box-2{
     grid-column: 1 !important;
