--- a/styles/lg.css
+++ b/styles/lg.css
@@ -1,140 +1,449 @@
 
 @media screen and (min-width: 1171px) {
 
-    .new-menu {
-      width: 100%;
-       height: 15%;
-       background-color: white;
-       border-bottom: 0.1em solid lightgray;
-       margin: 0;
-       padding: 0;
-  }
-  
-     .menu-nav{
-       height: 100%;
-       padding: 0;
-       margin: 0;
-       display: grid;
-       grid-template-columns: repeat(9, 1fr);
+    * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
+      .name-link-font{
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 400 bold !important;
+        color: #212d50 !important;
+        line-height: 45px !important;
+        font-size: 55px !important;
+        letter-spacing: 5px !important;
+        /* margin-top: 5% !important; */
+        /* margin-left: 15% !important; */
+        /* margin-bottom: 10% !important; */
+        cursor: pointer !important;
+      }
+
+      .name-text {
+        color: #212d50 !important;
+         margin-left: 41% !important;
+        margin-top: 1% !important;
+
+        
+    }
+    
+      .intro-font{
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 400 bold !important;
+        color: #212d50 !important;
+        font-size: 30px !important;
+        /* line-height: 45px !important; */
+        letter-spacing: 3px !important;
+      
+      }
+      
+      .intro-paragraph-font{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 25px !important;
+        color: #212d50 !important;
+        letter-spacing: 3px !important;
+        line-height: 0px !important;
+      }
+    
+    
+      .new-menu {
+        width: 100% !important;
+         height: 15% !important;
+         background-color: white !important;
+         border-bottom: 0.1em solid lightgray !important;
+         margin: 0 !important;
+         padding: 5px !important;
+    }
+    
+       .menu-nav{
+         height: 100% !important;
+         padding: 5px !important;
+         margin: 0 !important;
+         display: grid !important; 
+         grid-template-columns: repeat(9, 1fr) !important;
+         grid-auto-rows: 50% !important; 
+    
+         }
+       
+       
+       ul{
+         width: 100% !important;
+         
+         color: #212d50 !important;
        }
-     
-     
-     ul{
-       width: 100%;
        
-       color: #212d50;
-     }
-     
-     ul, li {
-       list-style-type: none;
+       ul, li {
+         list-style-type: none !important;
+         
+       }
        
-     }
-     
+      
     
-  
-     .name{
-       height: 100%;
-       grid-column: 1/ 3;
-     }
-  
-     .projects-link{
-       height: 100%;
-       grid-column: 6/ 7;
-     }
-  
-     .about-contact{
-       height: 100%;
-       grid-column: 7/ 8;
-     }
-  
-     .contact{
-       height: 100%;
-       grid-column: 8/ 10;
-      
-     }
-     
-     .name-text{
-       color: #212d50;
-       margin: 15% 0 0 40%;
-    }
-  
-     .project-text{
-       margin: 40% 0 0 0;
-      
-     }
-     .about-text{
-       margin: 40% 0 0 10%;
-      
-     }
-     .contact-text{
-       margin: 20% 0 0 0;
-      
-     }
-     
-     .projects-font{
-       line-height: 40px;
-       font-size: 20px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     
-     }
-     .about-font{
-       line-height: 40px;
-       font-size: 20px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     }
-     .contact-font{
-       line-height: 40px;
-       font-size: 20px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     }
-  
-     #particles-js {
-      /* background: rgb(37, 40, 52); */
-      /* background: rgb(242, 240, 236); */
-      /* background: #F5F4F1; */
-      background: #F9F8F6;
-      overflow: hidden;
-      height: 100%;
-      width: 100%;
-      margin: 0;
+       .name{
+         height: 100% !important;
+         grid-column: 1/ 3 !important;
+         grid-row: 1/ 2 !important;
+         
     
-    }
+       }
     
-    .container{
-      position: absolute;
-      width: 100%;
-      /* margin-top: 25%;
-      margin-left: 25%; */
-    }
+       .projects-link{
+         height: 100% !important;
+         grid-column: 6/ 7 !important;
+         grid-row: 2 !important;
+       }
     
-    div.intro{
-      width: 100%;
-      height: 40%;
-      margin-top: 35%;
-      margin-left: 5%;
-      position: absolute;
-      color: rgb(66, 66, 66);
-      font-size: 45px;
-      line-height: 45px;
-      font-weight: 400;
+       .about-contact{
+         height: 100% !important;
+         grid-column: 7/ 8 !important;
+         grid-row: 2 !important;
+       }
+    
+       .contact{
+         height: 100% !important;
+         grid-column: 8/ 10 !important;
+         grid-row: 2 !important;
+        
+       }
+       
+       .name-text{
+         color: #212d50 !important;
+         margin-left: 31% !important;
+         margin-top: 15% !important;
+         /* margin-bottom: 20%; */
+      }
+    
+       .project-text{
+        margin: 0 0 0 0 !important;
+        
+       }
+       .about-text{
+        margin: 0 0 0 10% !important;
+        
+       }
+       .contact-text{
+        margin: 0 0 0 0 !important;
+        
+       }
+       
+       .projects-font{
+         line-height: 40px;
+         font-size: 18px;
+         font-weight: 400 bold !important;
+         cursor: pointer;
+         letter-spacing: 3px;
+       
+       }
+       .about-font{
+         line-height: 40px;
+         font-size: 18px;
+         font-weight: 400 bold !important;
+         cursor: pointer;
+         letter-spacing: 3px;
+       }
+       .contact-font{
+         line-height: 40px;
+         font-size: 18px;
+         font-weight: 400 bold !important;
+         cursor: pointer;
+         letter-spacing: 3px;
+       }
+    
+       #particles-js {
+        /* background: rgb(37, 40, 52); */
+        /* background: rgb(242, 240, 236); */
+        /* background: #F5F4F1; */
+        background: #F9F8F6;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        margin: 0;
       
-      letter-spacing: 0px;
+      }
+      
+      .container{
+        position: absolute;
+        width: 100%;
+        /* margin-top: 25%;
+        margin-left: 25%; */
+      }
+      
+      div.intro{
+        width: 100% !important;
+        height: 30% !important;
+        margin-top: 40% !important;
+        margin-left: 5% !important;
+        position: absolute !important;
+        color: rgb(66, 66, 66) !important;
+        font-size: 45px !important; */
+        line-height: 45px !important;
+        font-weight: 400 !important;
+        
+        letter-spacing: 0px !important;
+      } 
+    
+      .portfolio{
+        display: grid !important;
+        grid-template-columns: 1fr !important;
+        grid-auto-rows: 50% !important;
+        grid-gap: 1rem !important;
+        /* margin-top: 5%; */
+       width: 90% !important;
+        height: 100% !important;
+        margin-left: 5% !important;
+        margin-right: 5% !important;
+        
+      }
+    
+      
+      .portfolio-heading {
+        display: flex !important;
+        margin-top: 20% !important;
+        flex-direction: column !important;
+        align-items: center !important;
+        grid-column: 1 !important;
+        width: 80%;
+        height: 50%;
+        grid-row: 1 !important;
     }
-  
-    .about-picture{
-      background-image: url("../assets/jhedi2_40\ 3.jpg");
-      background-size: cover;
-      height: 100%;
-      width: 100%;
-      margin-right: 10%;
-      grid-column: 6 / 8;
-      grid-row: 1/2;
+    .portfolio-heading-blurb{
+          /* margin-left: 10% !important; */
+          text-align: justify !important;
+          font-family: 'Open Sans', sans-serif !important;
+          font-size: 14px !important;
+          width: 70%;
+          margin-top: 5%;
+          margin-left: 10%;
+    }
+    .portfolio-heading-text {
+      font-family: 'Montserrat', sans-serif !important;
+      font-weight: 400 bold !important;
+      color: #212d50 !important;
+      font-size: 25px !important;
+      /* line-height: 45px; */
+      letter-spacing: 0px !important;
+    }
+    
+      .box-1 {
+        /* height: 100%; */
+        grid-column: 1 !important;
+        grid-row: 2 !important;
+      }
+    
+      
+    
+      .box-2{
+        grid-column: 1 !important;
+        grid-row: 3 !important;
+      }
+      .box-3{
+        grid-column: 1 !important;
+        grid-row: 4 !important;
+      }
+      .box-4{
+        grid-column: 1 !important;
+        grid-row: 5 !important;
+      }
+      .box-5{
+        grid-column: 1 !important;
+        grid-row: 6 !important;
+      }
+      .box-6{
+        grid-column: 1 !important;
+        grid-row: 7 !important;
+      }
+      
+    
+      .paragraph-container{
+        
+        background: #F9F8F6;
+        margin-top: 180% !important;
+        width: 100% !important;
+        height: 100% !important;
+        display: flex;  
+        
+        align-items: center;
+        
+      }
+      
+      
+      .paragraph{
+        display: grid;
+        grid-template-columns: 1fr !important;
+        grid-auto-rows: 40% !important;
+        grid-gap: 0.1rem !important;
+        margin-top: 15% !important;
+        margin-left: 5% !important;
+        width: 80% !important;
+        height: 100% !important;
+        margin-bottom: 20% !important;
+        /* position: absolute; */
+      
+      }
+      .about-blurb{
+        grid-column: 1 !important;
+        grid-row: 1 !important;
+        width: 80% !important;
+        /* margin-left: 5%; */
+        margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+        
+      }
+      .about-blurb-tittle {
+        margin-bottom: 5% !important;
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 400 bold !important;
+        color: #212d50 !important;
+        font-size: 35px !important;
+        /* line-height: 45px; */
+        letter-spacing: 3px !important;
+    }
+    
+    .about-blurb-text {
+      font-family: 'Open Sans', sans-serif !important;
+      font-size: 14px !important;
+      color: #43454B !important;
+    }
+      
+      
+      .about-picture {
+        background-image: url(../assets/jhedi2_40\ 3.jpg);
+        background-size: contain !important;
+        background-repeat: no-repeat !important;
+        height: 400px !important;
+        width: 400px !important;
+        margin-top: 10% !important;
+        grid-column: 1 !important;
+        grid-row: 2 !important;
+        display: block !important;
+    }
+    
+    
+    
+    
+    
+      
+      
+      .second-about-blurb{
+        display: none !important;
+        grid-column: 1 !important;
+        grid-row: 3 !important;
+        margin-top: 10%;
+        margin-left: 0;
+      }
+      
+      .second-about-img{
+        display: none !important;
+        background-image: url("../assets/IMG_2635.jpg");
+        background-size: cover;
+        grid-column: 1 !important;
+        grid-row: 3 !important;
+        margin-top: 30%;
+      }
+      /* .third-about-img{
+        grid-column: 2 / 3;
+        grid-row: 2/3;
+      
+      } */
+                                                                                      
+      
+      /* .about-picture{
+        background-image: url("../assets/jhedi2_40\ 3.jpg");
+        background-size: cover;
+        height: 100%;
+        width: 100%;
+        margin-right: 10%;
+        grid-column: 6 / 8;
+        grid-row: 1/2;
+      } */
+    
+        .contact-font-last{
+      
+        width: 100% !important;
+        height: 100% !important;
+        margin-top: 10%;
+        
+      } 
+       
+      .contact-container{
+        display: grid !important;
+        grid-template-columns: 1fr !important;
+        grid-auto-rows: 40% !important;
+        grid-gap: 0.1rem !important;
+        /* margin-top: 380% !important; */
+        width: 93% !important;
+        height: 100% !important;
+        margin-left: 5% !important;
+        margin-right: 5% !important;
+      }
+      
+      
+      
+      div#map{
+       height: 400px !important;
+       width: 100% !important;
+       margin-left: 0 !important;
+       /* margin-right: 40% !important; */
+      
+      }
+      
+      
+      .contact-page{ 
+        grid-column: 1 !important;
+        grid-row: 2 !important;
+        margin-top: 10% !important;
+      }
+      
+      #map{
+        grid-column: 1 !important;
+        grid-row: 1 !important;
+        /* height: 150px !important; */
+       
+        /* margin-right: 30% !important; */
+      }
+      
+      .contact-form{
+        grid-column: 3 / 6;
+        grid-row: 3/4;
+      
+      }
+      .contact-page-text {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400 bold !important;
+        color: #212d50 !important;
+        font-size: 35px !important;
+        /* line-height: 45px; */
+        letter-spacing: 3px !;
+        
+    }
+    .contact-page-text-email  {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px !important;
+      color: #43454B;
+    }
+    .email{
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px !important;
+      color: #43454B;
+    }
+    
+      div.footer {
+        display: flex !important;
+        flex-direction: row !important;
+        justify-content: center !important;
+        align-items: center !important;
+        bottom: 0 !important;
+        border-top: 1px solid lightgray !important;
+        margin-top: 25% !important;
+        height: 5% !important; 
+        width: 100% !important;
+    }
+    .footer-text {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px !important;
+      color: #43454B !important;
+      padding-top: 5% !important;
     }
   
 }
