--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -22,6 +22,59 @@
     
     z-index: 1000;
 }
+
+.icon-bar {
+  position: fixed;
+  bottom: 0;
+  left: 5px;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+/* .media{
+  height: 100% !important;
+  grid-column: 10/13 !important;
+  grid-row: 2 !important;
+} */
+
+
+.media a {
+  height: 100%;
+  display: inline-block;
+  text-align: center;
+  padding: 0 15px 0px 0px;
+  
+  transition: all 0.3s ease;
+  /* color: white; */
+  font-size: 20px;
+  /* display: none; */
+ 
+}
+
+.media{
+  height: 100% !important;
+  grid-column: 2/5 !important;
+  
+}
+
+/* Style the icon bar links */
+.icon-bar a {
+  display: none;
+  text-align: center;
+  padding: 10px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 25px;
+  z-index: 1000;
+  
+}
+
+.icon-bar a:hover {
+  background-color: lightgrey;
+  z-index: 1000;
+}
+ 
   .name-link-font {
     font-family: 'Montserrat', sans-serif !important;
     font-weight: 400 !important;
