--- a/styles/medium.css
+++ b/styles/medium.css
@@ -22,151 +22,152 @@
         z-index: 1000;
     }
 
-      .name-link-font{
+    .name-link-font{
         font-family: 'Montserrat', sans-serif !important;
-    font-weight: 400 bold !important;
-    color: #212d50 !important;
-    line-height: 0px !important;
-    font-size: 45px !important;
-    letter-spacing: 5px !important;
-    margin-top: 25% !important;
-    margin-left: 45% !important;
-    margin-bottom: 0% !important;
-    cursor: pointer !important;
-      }
-
-      .name-text {
+        font-weight: 400 bold !important;
         color: #212d50 !important;
-         margin-left: 41% !important;
-        margin-top: 1% !important;
-
-        
+        line-height: 0px !important;
+        font-size: 45px !important;
+        letter-spacing: 5px !important;
+        margin-top: 25% !important;
+        margin-left: 45% !important;
+        margin-bottom: 0% !important;
+        cursor: pointer !important;
     }
     
-      .intro-font{
+    .name-text {
+        color: #212d50 !important;
+        margin-left: 41% !important;
+        margin-top: 1% !important;
+    
+        
+    }
+        
+    .intro-font{
         font-family: 'Montserrat', sans-serif !important;
+        /* font-family: 'Open Sans', sans-serif !important; */
         font-weight: 400 !important;
         color: #212d50 !important;
         font-size: 30px !important;
         /* line-height: 45px !important; */
         letter-spacing: 3px !important;
-      
-      }
-      
-      .intro-paragraph-font{
-        font-family: 'Open Sans', sans-serif;
+    }
+          
+    .intro-paragraph-font{
+        font-family: 'Montserrat', sans-serif !important;
+        /* font-family: 'Open Sans', sans-serif !important; */
+        font-size: 30px !important;
         font-weight: 400 !important;
-        font-size: 28px !important;
         color: #212d50 !important;
         letter-spacing: 3px !important;
         line-height: 0px !important;
-      }
-    
-    
-      .new-menu {
-        width: 100% !important;
-    height: 15% !important;
-    background-color: white !important;
-    border-bottom: 0.1em solid lightgray !important;
-    margin: 0 !important;
-    /* padding: 5px !important; */
     }
     
-       .menu-nav{
+        
+    .new-menu {
+        width: 100% !important;
+        height: 15% !important;
+        background-color: white !important;
+        border-bottom: 0.1em solid lightgray !important;
+        margin: 0 !important;
+        /* padding: 5px !important; */
+    }
+        
+    .menu-nav{
         height: 100% !important;
         /* padding: 5px !important; */
         margin: 0 !important;
         display: grid !important;
-        grid-template-columns: repeat(11, 1fr) !important;
+        grid-template-columns: repeat(13, 1fr) !important;
         grid-auto-rows: 50% !important;
     
-         }
-       
-       
-       ul{
-         width: 100% !important;
-         
-         color: #212d50 !important;
-       }
-       
-       ul, li {
-         list-style-type: none !important;
-         
-       }
-       
-      
+    }
+           
+           
+    ul{
+        width: 100% !important;
+        
+        color: #212d50 !important;
+    }
     
-       .name{
+    ul, li {
+        list-style-type: none !important;
+        
+    }
+           
+          
+        
+    .name{
         height: 100% !important;
         grid-column: 2/ 3 !important;
         grid-row: 2 !important;
-         
     
-       }
     
-       .projects-link{
+    }
+    
+    .projects-link{
         height: 100% !important;
-        grid-column: 5 !important;
+        grid-column: 6 !important;
         grid-row: 2 !important;
-       }
+    }
     
-       .about-contact{
+    .about-contact{
         height: 100% !important;
-    grid-column: 7;
-    grid-row: 2 !important;
-       }
+        grid-column: 8;
+        grid-row: 2 !important;
+    }
     
-       .contact{
+    .contact{
         height: 100% !important;
-    grid-column: 9/ 10 !important;
-    grid-row: 2 !important;
-        
-       }
-       
-       .name-text{
+        grid-column: 10 !important;
+        grid-row: 2 !important;
+    
+    }
+    
+    .name-text{
         color: #212d50 !important;
         /* margin-left: 31% !important; */
         /* margin-top: 15% !important; */
         /* margin-bottom: 20%; */
-      }
+    }
     
-       .project-text{
+    .project-text{
         margin: 0 0 0 0 !important;
-        
-       }
-       .about-text{
-        margin: 0 0 0 0 !important;
-        
-       }
-       .contact-text{
-        margin: 0 0 0 0 !important;
-        
-       }
-       
-       .projects-font{
-        line-height: 0px;
-        font-size: 14px;
-        font-weight: 400 bold !important;
-        cursor: pointer;
-        letter-spacing: 3px;
-       
-       }
-       .about-font{
-        line-height: 0px;
-        font-size: 14px;
-        font-weight: 400 bold !important;
-        cursor: pointer;
-        letter-spacing: 3px;
-       }
-       .contact-font{
-        line-height: 0px;
-        font-size: 14px;
-        font-weight: 400 bold !important;
-        cursor: pointer;
-        letter-spacing: 3px;
-       }
     
-       #particles-js {
+    }
+    .about-text{
+        margin: 0 0 0 0 !important;
+    
+    }
+    .contact-text{
+        margin: 0 0 0 0 !important;
+    
+    }
+    
+    .projects-font{
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
+    
+    }
+    .about-font{
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
+    }
+    .contact-font{
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
+    }
+    
+    #particles-js {
         /* background: rgb(37, 40, 52); */
         /* background: rgb(242, 240, 236); */
         /* background: #F5F4F1; */
@@ -175,30 +176,77 @@
         height: 100%;
         width: 100%;
         margin: 0;
-      
-      }
-      
-      .container{
+    
+    }
+    
+    .container{
         position: absolute;
         width: 100%;
-        /* margin-top: 25%;
-        margin-left: 25%; */
-      }
-      
-      div.intro{
+    
+    }
+    
+    /* ICON BAR */
+    
+    .icon-bar {
+        position: fixed;
+        top: 50%;
+        left: 5px;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+    
+    .media{
+        height: 100% !important;
+        grid-column: 12/14 !important;
+        grid-row: 2 !important;
+    }
+    
+    
+    .media a {
+        height: 100%;
+        display: inline-block;
+        text-align: center;
+        padding: 0 20px 0px 0px;
+        transition: all 0.3s ease;
+        color: white;
+        font-size: 20px;
+       
+    }
+    
+    /* Style the icon bar links */
+    .icon-bar a {
+        display: block;
+        text-align: center;
+        padding: 16px;
+        transition: all 0.3s ease;
+        color: white;
+        font-size: 30px;
+        z-index: 1000;
+        
+    }
+    
+    .icon-bar a:hover {
+        background-color: lightgrey;
+        z-index: 1000;
+    }
+    
+    
+    /* END ICON BAR */
+    
+    div.intro{
+        font-family: 'Open Sans', sans-serif !important;
         width: 100% !important;
         height: 30% !important;
-        margin-top: 40% !important;
-        margin-left: 5% !important;
+        margin-top: 35% !important;
+        margin-left: 10% !important;
         position: absolute !important;
         color: rgb(66, 66, 66) !important;
-        /* font-size: 45px !important; */
-        /* line-height: 45px !important;
+        font-size: 45px !important;
         font-weight: 400 !important;
-        
-        letter-spacing: 0px !important; */
-      }
-    
+        letter-spacing: 0px !important;
+    } 
+       
       .portfolio{
         display: grid !important;
         grid-template-columns: 1fr !important;
