--- a/styles/pad.css
+++ b/styles/pad.css
@@ -26,7 +26,7 @@
     font-weight: 400 bold !important;
     color: #212d50 !important;
     line-height: 0px !important;
-    font-size: 45px !important;
+    font-size: 40px !important;
     letter-spacing: 5px !important;
     margin-top: 25% !important;
     margin-left: 45% !important;
@@ -44,17 +44,18 @@
     
       .intro-font{
         font-family: 'Montserrat', sans-serif !important;
-        font-weight: 400 bold !important;
+        font-weight: 600 !important;
         color: #212d50 !important;
-        font-size: 30px !important;
+        font-size: 20px !important;
         /* line-height: 45px !important; */
         letter-spacing: 3px !important;
       
       }
       
       .intro-paragraph-font{
-        font-family: 'Open Sans', sans-serif;
-        font-size: 25px !important;
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 600 !important;
+        font-size: 20px !important;
         color: #212d50 !important;
         letter-spacing: 3px !important;
         line-height: 0px !important;
@@ -96,7 +97,7 @@
     
        .name{
         height: 100% !important;
-        grid-column: 2/ 3 !important;
+        grid-column: 1/ 2 !important;
         grid-row: 2 !important;
          
     
@@ -104,22 +105,66 @@
     
        .projects-link{
         height: 100% !important;
-        grid-column: 5 !important;
+        grid-column: 4 !important;
         grid-row: 2 !important;
        }
     
        .about-contact{
         height: 100% !important;
-    grid-column: 7;
+    grid-column: 6;
     grid-row: 2 !important;
        }
     
        .contact{
         height: 100% !important;
-    grid-column: 9/ 10 !important;
+    grid-column: 8 !important;
     grid-row: 2 !important;
         
        }
+
+       .icon-bar {
+        position: fixed;
+        top: 50%;
+        left: 5px;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+    
+    .media{
+        height: 100% !important;
+        grid-column: 10/13 !important;
+        grid-row: 2 !important;
+    }
+    
+    
+    .media a {
+        height: 100%;
+        display: inline-block;
+        text-align: center;
+        padding: 0 10px 0px 0px;
+        transition: all 0.3s ease;
+        color: white;
+        font-size: 17px;
+       
+    }
+    
+    /* Style the icon bar links */
+    .icon-bar a {
+        display: block;
+        text-align: center;
+        padding: 10px;
+        transition: all 0.3s ease;
+        color: white;
+        font-size: 25px;
+        z-index: 1000;
+        
+    }
+    
+    .icon-bar a:hover {
+        background-color: lightgrey;
+        z-index: 1000;
+    }
        
        .name-text{
         color: #212d50 !important;
@@ -143,7 +188,7 @@
        
        .projects-font{
         line-height: 0px;
-        font-size: 14px;
+        font-size: 11px;
         font-weight: 400 bold !important;
         cursor: pointer;
         letter-spacing: 3px;
@@ -151,14 +196,14 @@
        }
        .about-font{
         line-height: 0px;
-        font-size: 14px;
+        font-size: 11px;
         font-weight: 400 bold !important;
         cursor: pointer;
         letter-spacing: 3px;
        }
        .contact-font{
         line-height: 0px;
-        font-size: 14px;
+        font-size: 11px;
         font-weight: 400 bold !important;
         cursor: pointer;
         letter-spacing: 3px;
@@ -187,7 +232,7 @@
         width: 100% !important;
         height: 30% !important;
         margin-top: 75% !important;
-        margin-left: 5% !important;
+        margin-left: 10% !important;
         position: absolute !important;
         color: rgb(66, 66, 66) !important;
         /* font-size: 45px !important; */
