--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ div.intro{
   background-image: url("../assets/workspaces.jpeg");
   background-size: cover;
   cursor: pointer;
-  position: relative;
+  position: absolute;
 }
 
 
@@ -117,7 +117,7 @@ div.intro{
 
 }
 
-.box-1:hover .hover-info{
+.box-1:hover {
   width: 100%;
   border: solid 1px;
   border-color: lightgrey;
