--- a/styles/lg.css
+++ b/styles/lg.css
@@ -299,7 +299,58 @@ div.intro{
     letter-spacing: 3px !important;
 }
 
-.box{
+.project-info{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    transition: .5s ease;
+    background-color: white !important;
+  
+  }
+  .project-info-text{
+    /* color: white; */
+    font-size: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+  }
+  
+  .box-wrapper-1, .box-wrapper-2, .box-wrapper-3, .box-wrapper-4, .box-wrapper-5,  .box-wrapper-6 {
+    position: relative;
+    width: 100%;
+  }
+  .box-wrapper-1:hover .project-info,  .box-wrapper-1:focus .project-info, .box-wrapper-1:active .project-info {
+    width: 100%;
+  }
+  
+  
+  .box-wrapper-2:hover .project-info {
+    width: 100%;
+  }
+  .box-wrapper-3:hover .project-info {
+    width: 100%;
+  }
+  .box-wrapper-4:hover .project-info {
+    width: 100%;
+  }
+  .box-wrapper-5:hover .project-info {
+    width: 100%;
+  }
+  .box-wrapper-6:hover .project-info {
+    width: 100%;
+  }
+
+
+  .box-wrapper-1{
     height: 100%;
     grid-column: 2 / 5 !important;
     grid-row: 2 / 4 !important;
@@ -307,19 +358,19 @@ div.intro{
 
 
 
-.box-2{
+.box-wrapper-2{
     grid-column: 5 / 8 !important;
     grid-row: 2 !important;
 }
-.box-3{
+.box-wrapper-3{
     grid-column: 5 / 8 !important;
     grid-row: 3 !important;
 }
-.box-4{
+.box-wrapper-4{
     grid-column: 8 / 11 !important;
     grid-row: 2 !important;
 }
-.box-5{
+.box-wrapper-5{
     grid-column: 8 / 11 !important;
     grid-row: 3 !important;
 }
@@ -436,11 +487,11 @@ grid-row: 7 !important;
 
 
 div#map{
-    height: 400px !important;
+    height: 550px !important;
     width: 100% !important;
-    /* margin-left: 0 !important; */
-    grid-column: 2 / 11 !important;
-    grid-row: 1 / 3 !important;
+    margin-left: 0 !important;
+    grid-column: 2 /11 !important;
+    grid-row: 1 / 4 !important;
     /* margin-right: 40% !important; */
 
 }
