--- a/styles/style.css
+++ b/styles/style.css
@@ -103,7 +103,7 @@ div.intro{
 
 
 
-.hover-info{
+/* .hover-info{
   height: 100%;
   width: 0%;
   top: 0%;
@@ -115,14 +115,14 @@ div.intro{
   transition: 0.3s ease;
   background-color: white;
 
-}
+} */
 
-.box-1:hover {
+/* .box-1:hover {
   width: 100%;
   border: solid 1px;
   border-color: lightgrey;
 
-}
+} */
 
  .box-2{
   height: 100%;
@@ -136,7 +136,7 @@ div.intro{
   
 }
 
-.hover-info{
+/* .hover-info{
   height: 100%;
   width: 0%;
   top: 0%;
@@ -148,14 +148,14 @@ div.intro{
   transition: 0.3s ease;
   background-color: white;
 
-}
+} */
 
-.box-2:hover .hover-info{
+/* .box-2:hover .hover-info{
   width: 100%;
   border: solid 1px;
   border-color: lightgrey;
 
-}
+} */
 
 .box-3{
   height: 100%;
@@ -170,7 +170,7 @@ div.intro{
   
 } 
 
-.hover-info{
+/* .hover-info{
   height: 100%;
   width: 0%;
   top: 0%;
@@ -182,14 +182,14 @@ div.intro{
   transition: 0.3s ease;
   background-color: white;
 
-}
+} */
 
-.box-3:hover .hover-info{
+/* .box-3:hover .hover-info{
   width: 100%;
   border: solid 1px;
   border-color: lightgrey;
 
-}
+} */
 
 .box-4{
   height: 100%;
@@ -202,7 +202,7 @@ div.intro{
   position: relative;
 }
 
-.hover-info{
+/* .hover-info{
   height: 100%;
   width: 0%;
   top: 0%;
@@ -214,14 +214,14 @@ div.intro{
   transition: 0.3s ease;
   background-color: white;
 
-}
+} */
 
-.box-4:hover .hover-info{
+/* .box-4:hover .hover-info{
   width: 100%;
   border: solid 1px;
   border-color: lightgrey;
 
-}
+} */
 
 .box-5{
   height: 100%;
@@ -234,7 +234,7 @@ div.intro{
   position: relative;
 }
 
-.hover-info{
+/* .hover-info{
   height: 100%;
   width: 0%;
   top: 0%;
@@ -247,9 +247,9 @@ div.intro{
   transition: 0.3s ease;
   background-color: white;
 
-}
+} */
 
-.box-5:hover .hover-info{
+/* .box-5:hover .hover-info{
   width: 100%;
   border: solid 1px;
   border-color: lightgrey;
@@ -259,7 +259,7 @@ div.intro{
 .box-6{
   grid-column: 3 / 4;
   grid-row: 4 / 6 ;
-}
+} */
 
 
 
