paronama first pass

--- a/styles/pad.css
+++ b/styles/pad.css
@@ -571,609 +571,4 @@
 
 
 
-  @media screen 
-  and (min-width: 414px) 
-  and (max-width: 736px) 
- 
-  and (orientation: landscape) { 
-
-    * {
-      box-sizing: border-box;
-      padding: 0;
-      margin: 0;
-      
-    }
-    a#scroll {
-      width: 45px;
-      height: 45px;
-      opacity: 0.8;
-      position: fixed;
-      bottom: 4%;
-      left: 80%;
-      display: none;
-      text-indent: -10000px;
-      outline: none !important;
-      background-image: url(../assets/mario.png);
-      background-size: cover;
-      background-repeat: no-repeat;
-      
-      z-index: 1000;
-  }
-  
-  .icon-bar {
-    position: fixed;
-    bottom: 0;
-    left: 5px;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-  }
-  
-  /* .media{
-    height: 100% !important;
-    grid-column: 10/13 !important;
-    grid-row: 2 !important;
-  } */
-  
-  
-  .media a {
-    height: 100%;
-    display: inline-block;
-    text-align: center;
-    padding: 0 15px 0px 0px;
-    
-    transition: all 0.3s ease;
-    /* color: white; */
-    font-size: 20px;
-    /* display: none; */
-   
-  }
-  
-  .media{
-    height: 100% !important;
-    grid-column: 2/5 !important;
-    
-  }
-  
-  .fa-github:before {
-    content: "\f09b";
-    color: gray !important;
-  }
-  
-  .fa-linkedin:before {
-    content: "\f0e1";
-    color: gray !important;
-  }
-  
-  /* Style the icon bar links */
-  .icon-bar a {
-    display: none;
-    text-align: center;
-    padding: 10px;
-    transition: all 0.3s ease;
-    color: white;
-    font-size: 25px;
-    z-index: 1000;
-    
-  }
-  
-  .icon-bar a:hover {
-    background-color: lightgrey;
-    z-index: 1000;
-  }
-   
-    .name-link-font {
-      font-family: 'Montserrat', sans-serif !important;
-      font-weight: 400 !important;
-      color: #212d50 !important;
-      
-      font-size: 35px !important;
-      letter-spacing: 5px !important;
-      
-      cursor: pointer !important;
-  }
-  
-    .intro-font{
-      font-family: 'Montserrat', sans-serif !important;
-      font-weight: 400 !important;
-      color: #212d50 !important;
-      font-size: 20px !important;
-      /* line-height: 45px !important; */
-      letter-spacing: 3px !important;
-      margin-top: 0;
-    
-    }
-    
-    .intro-paragraph-font{
-      font-family: 'Open Sans', sans-serif;
-      font-size: 15px !important;
-      font-weight: 400;
-      color: #212d50 !important;
-      letter-spacing: 3px !important;
-      line-height: 0px !important;
-      margin-top: 0;
-    }
-  
-  
-    .new-menu {
-      width: 100% !important;
-       height: 15% !important;
-       background-color: white !important;
-       border-bottom: 0.1em solid lightgray !important;
-       margin: 0 !important;
-       padding: 0 !important;
-       position: absolute;
-  }
-  
-  
-  
-  
-     .menu-nav{
-       height: 100% !important;
-       padding: 0 !important;
-       margin: 0 !important;
-       display: grid !important; 
-       grid-template-columns: repeat(9, 1fr) !important;
-       grid-auto-rows: 50% !important; 
-  
-       }
-     
-     
-     ul{
-       width: 100% !important;
-       
-       color: #212d50 !important;
-     }
-     
-     ul, li {
-       list-style-type: none !important;
-      
-       
-     }
-     
-    
-  
-     .name{
-       height: 100% !important;
-       grid-column: 1/ 10 !important;
-       grid-row: 1 / 2 !important;
-  
-     }
-  
-     .mobile-nav {
-      position: absolute;
-      z-index: 3;
-      right: 5%;
-      top: 35%;
-      cursor: pointer;
-      grid-column: 8/ 10 !important;
-      grid-row: 1 !important;
-      display: block !important;
-      
-     }
-  
-     .mobile{
-       display: block !important;
-     }
-  
-     .projects-link{
-       height: 100% !important;
-       grid-column: 1/ 10 !important;
-       grid-row: 3;
-       border-top: lightgrey solid 1px;
-       border-bottom: lightgrey solid 1px;
-       display: none;
-       
-     }
-  
-     .about-contact{
-       height: 100% !important;
-       grid-column: 1 / 10 !important;
-       grid-row: 4;
-       border-bottom: lightgrey solid 1px;
-       display: none;
-     }
-  
-     .contact{
-       height: 100% !important;
-       grid-column: 1/ 10 !important;
-       grid-row: 5;
-       border-bottom: lightgrey solid 1px;
-       display: none ;
-      
-     }
-     
-     .name-text{
-      color: #212d50 !important;
-      margin-left: 41% !important;
-      margin-top: 8% !important;
-      width: 20%;
-  }
-      
-    
-  
-     .project-text{
-      margin: 1% 0 0 5% !important;
-      
-      
-     }
-     .about-text{
-      margin: 1% 0 0 5% !important;
-      
-     }
-     .contact-text{
-      margin: 1% 0 0 5% !important;
-      
-     }
-     
-     .projects-font{
-       line-height: 40px;
-       font-size: 13px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     
-     }
-     .about-font{
-       line-height: 40px;
-       font-size: 12px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     }
-     .contact-font{
-       line-height: 40px;
-       font-size: 12px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     }
-  
-     ul li {
-       background: white;
-       width: 100% !important;
-       
-     }
-     
-    
-      .btn-line {
-        width: 25px;
-        height: 1.5px;
-        margin: 0 0 5px 0;
-        background: #212d50 !important;
-        
-      }
-     
-  
-     #particles-js {
-      /* background: rgb(37, 40, 52); */
-      /* background: rgb(242, 240, 236); */
-      /* background: #F5F4F1; */
-      background: #F9F8F6;
-      overflow: hidden;
-      height: 100%;
-      width: 100%;
-      margin: 0;
-    
-    }
-    
-    .container{
-      position: absolute;
-      width: 100%;
-      /* margin-top: 25%;
-      margin-left: 25%; */
-    }
-    
-    div.intro{
-      width: 100% !important;
-      height: 30% !important;
-      margin-top: 120% !important;
-      margin-left: 5% !important;
-      position: absolute !important;
-      color: rgb(66, 66, 66) !important;
-      
-    }
-  
-    .portfolio{
-      display: grid !important;
-      grid-template-columns: 1fr !important;
-      grid-auto-rows: 40% !important;
-      grid-gap: 1rem !important;
-      /* margin-top: 5%; */
-     width: 90% !important;
-      height: 100% !important;
-      margin-left: 5% !important;
-      margin-right: 5% !important;
-      
-    }
-  
-    
-    .portfolio-heading {
-      display: flex !important;
-      margin-top: 20% !important;
-      flex-direction: column !important;
-      align-items: center !important;
-      grid-column: 1 !important;
-      width: 80%;
-      height: 50%;
-      grid-row: 1 !important;
-  }
-  .portfolio-heading-blurb{
-        /* margin-left: 10% !important; */
-        text-align: justify !important;
-        font-family: 'Open Sans', sans-serif !important;
-        font-size: 12px !important;
-        height: 100%;
-        width: 88%;
-  }
-  .portfolio-heading-text {
-    font-family: 'Montserrat', sans-serif !important;
-    font-weight: 400 !important;
-    color: #212d50 !important;
-    font-size: 15px !important;
-    /* line-height: 45px; */
-    letter-spacing: 3px !important;
-    margin-bottom: 20px;
-  }
-  
-  .project-info{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    
-    overflow: hidden;
-    width: 0;
-    height: 100%;
-    transition: .5s ease;
-    background-color: white !important;
-  
-  }
-  .project-info-text{
-    color: white;
-    font-size: 10px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    white-space: nowrap;
-  }
-  
-  .box {
-    position: relative;
-    width: 100%;
-  }
-  .box:hover .project-info,  .box:focus .project-info, .box:active .project-info {
-    width: 100%;
-  }
-  
-  
-  
-  
-    .box{
-      /* height: 100%; */
-      grid-column: 1 !important;
-      grid-row: 2 !important;
-    }
-  
-    
-    
-  
-    .box-2{
-      grid-column: 1 !important;
-      grid-row: 3 !important;
-    }
-    .box-3{
-      grid-column: 1 !important;
-      grid-row: 4 !important;
-    }
-    .box-4{
-      grid-column: 1 !important;
-      grid-row: 5 !important;
-    }
-    .box-5{
-      grid-column: 1 !important;
-      grid-row: 6 !important;
-    }
-    .box-6{
-      grid-column: 1 !important;
-      grid-row: 7 !important;
-    }
-    
-  
-    .paragraph-container{
-      
-      background: #F9F8F6;
-      margin-top: 300% !important;
-      width: 100% !important;
-      height: 100% !important;
-      display: flex;  
-      
-      align-items: center;
-      
-    }
-    
-    
-    .paragraph{
-      display: grid;
-      grid-template-columns: 1fr !important;
-      grid-auto-rows: 40% !important;
-      grid-gap: 0.1rem !important;
-      margin-top: 35% !important;
-      margin-left: 5% !important;
-      width: 80% !important;
-      height: 100% !important;
-      /* position: absolute; */
-    
-    }
-    .about-blurb{
-      grid-column: 1 !important;
-      grid-row: 1 !important;
-      width: 80% !important;
-      /* margin-left: 5%; */
-      margin-top: 5%;
-      display: flex;
-      flex-direction: column;
-      
-    }
-    .about-blurb-tittle {
-      margin-bottom: 5% !important;
-      font-family: 'Montserrat', sans-serif !important;
-      font-weight: 400;
-      color: #212d50 !important;
-      font-size: 30px !important;
-      /* line-height: 45px; */
-      letter-spacing: 3px !important;
-  }
-  
-  .about-blurb-text {
-    font-family: 'Open Sans', sans-serif !important;
-    font-size: 12px !important;
-    color: #43454B !important;
-  }
-    
-    
-    .about-picture {
-      background-image: url(../assets/jhedi2_40\ 3.jpg);
-      background-size: contain !important;
-      background-repeat: no-repeat !important;
-      height: 400px !important;
-      width: 400px !important;
-      margin-top: 15% !important;
-      grid-column: 1 !important;
-      grid-row: 2 !important;
-      display: block !important;
-  }
-  
-  
-  
-  
-  
-    
-    
-    .second-about-blurb{
-      display: none !important;
-      grid-column: 1 !important;
-      grid-row: 3 !important;
-      margin-top: 10%;
-      margin-left: 0;
-    }
-    
-    .second-about-img{
-      display: none !important;
-      background-image: url("../assets/IMG_2635.jpg");
-      background-size: cover;
-      grid-column: 1 !important;
-      grid-row: 3 !important;
-      margin-top: 30%;
-    }
-    /* .third-about-img{
-      grid-column: 2 / 3;
-      grid-row: 2/3;
-    
-    } */
-                                                                                    
-    
-    /* .about-picture{
-      background-image: url("../assets/jhedi2_40\ 3.jpg");
-      background-size: cover;
-      height: 100%;
-      width: 100%;
-      margin-right: 10%;
-      grid-column: 6 / 8;
-      grid-row: 1/2;
-    } */
-  
-      .contact-font-last{
-    
-      width: 100% !important;
-      height: 100% !important;
-      margin-top: 70%;
-      
-    } 
-     
-    .contact-container{
-      display: grid !important;
-      grid-template-columns: 1fr !important;
-      grid-auto-rows: 40% !important;
-      grid-gap: 0.1rem !important;
-      /* margin-top: 380% !important; */
-      width: 93% !important;
-      height: 100% !important;
-      margin-left: 5% !important;
-      margin-right: 5% !important;
-    }
-    
-    
-    
-    div#map{
-     height: 200px !important;
-     width: 100% !important;
-     margin-left: 0 !important;
-     margin-top: 10%;
-     /* margin-right: 40% !important; */
-    
-    }
-    
-    
-    .contact-page{ 
-      grid-column: 1 !important;
-      grid-row: 2 !important;
-      margin-top: 10% !important;
-    }
-    
-    #map{
-      grid-column: 1 !important;
-      grid-row: 1 !important;
-      /* height: 150px !important; */
-     
-      /* margin-right: 30% !important; */
-    }
-    
-    .contact-form{
-      grid-column: 3 / 6;
-      grid-row: 3/4;
-    
-    }
-    .contact-page-text {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 400;
-      color: #212d50 !important;
-      font-size: 30px !important;
-      /* line-height: 45px; */
-      letter-spacing: 3px !important;
-      
-  }
-  .contact-page-text-email  {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px !important;
-    color: #43454B;
-  }
-  .email{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px !important;
-    color: #43454B;
-  }
-  
-    div.footer {
-      display: flex !important;
-      flex-direction: row !important;
-      justify-content: center !important;
-      align-items: center !important;
-      bottom: 0 !important;
-      border-top: 1px solid lightgray !important;
-      margin-top: 25% !important;
-      height: 5% !important; 
-      width: 100% !important;
-  }
-  .footer-text {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px !important;
-    color: #43454B !important;
-    padding-top: 5% !important;
-  }
-  
-
-}
+  /*  */
