--- a/styles/landscape.css
+++ b/styles/landscape.css
@@ -408,12 +408,49 @@ and (orientation: landscape) {
       grid-column: 1 !important;
       grid-row: 7 !important;
     }
+
+    .resume-wrapper{
+        height: 150px;
+             width: 50%;
+             margin-left: 25%;
+             grid-column: 1;
+            grid-row: 7 !important;
+            align-items: center;
+    }
+    
+    .resume-button{
+      height: 50%;
+        width: 100%;
+        margin: 10% auto;
+        border: solid 1px;
+        border-color: lightgrey;
+        border-radius: 5px;
+    }
+    
+    .resume-button-link{
+        margin: auto;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .resume-button-text{
+        font-family: 'Open Sans', sans-serif !important;
+        font-family: 'Open Sans', sans-serif !important;
+        font-size: 20px;
+        font-weight: 300;
+        letter-spacing: 10px;
+        color: gray !important;
+    }
+    
     
   
     .paragraph-container{
       
       background: #F9F8F6;
-      margin-top: 200% !important;
+      margin-top: 220% !important;
       width: 100% !important;
       height: 200% !important;
       display: flex;  
