--- a/styles/pad.css
+++ b/styles/pad.css
@@ -693,7 +693,7 @@
       font-family: 'Open Sans', sans-serif;
       font-size: 14px !important;
       color: #43454B !important;
-      padding-top: 5% !important;
+      /* padding-top: 5% !important; */
     }
   
   }
